[tool.poetry]
name = "crispy-garbanzo"
version = "0.1.0"
description = "Practicing Python"
authors = ["Geo Abraham <geoabraham@tuta.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/geoabraham/crispy-garbanzo"
repository = "https://github.com/geoabraham/crispy-garbanzo"


[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
